messaging scrollbar personalized, added keypress on textarea, minor fixes

--- a/src/components/messageList/messages.scss
+++ b/src/components/messageList/messages.scss
@@ -7,11 +7,14 @@
 
 .messages-block{
   padding-bottom: 40px;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
 }
 
 .full-card-message{
   margin: 0 auto;
-  padding: 10px;
+  padding: 0px;
   width: 300px;
 
 }
@@ -60,9 +63,6 @@
 }
 
 
-
-
-
 .email-subject{
   font-family: $font-type-b;
   font-size: $text-size-m;
@@ -95,7 +95,31 @@
   flex-direction: column;
   flex: 1 1 70%;
   background-color: $primary-clear;
+
 }
+
+.message-scroll{
+  height: 370px;
+  overflow: scroll;
+  overflow-x: hidden;
+  padding: 0 5px;
+
+  &::-webkit-scrollbar{
+    background-color:#fff;
+    width:16px;
+  }
+  &::-webkit-scrollbar-track {
+    background-color:$primary-clear;
+  }
+  &::-webkit-scrollbar-thumb {
+    background-color:#c4ca97;
+    border-radius: $radius-b;
+    background-clip: content-box;
+    border:5px solid $primary-clear;
+  }
+
+}
+
 
 .user-left {
   text-align: left;
@@ -160,7 +184,7 @@
   .message-textarea{
     
     width:97%;
-    height: 40px;
+    min-height: 44px;
     border-radius: $radius-a;
     border: 1px solid rgb(240, 231, 231);
     font-size: $text-size-m;
